{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "8f82b1d5-28d2-4c86-99ac-52f26cf09a42",
            "actions": [
                {
                    "name": "PointerPressed",
                    "type": "Button",
                    "id": "b49cd141-45e0-4c3d-afa4-485dafd76249",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerMoved",
                    "type": "Value",
                    "id": "fce00f3a-7cde-448b-afac-c814b5a7068c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScrolled",
                    "type": "Value",
                    "id": "5f6baa16-23f4-4446-a083-0664acb0c273",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchContact",
                    "type": "Button",
                    "id": "86cee61a-259e-4d29-ba15-c7dfac0ba432",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondTouchMoved",
                    "type": "Value",
                    "id": "fd45b6ad-f870-4594-8bfa-ee385a0a0d5a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6d0a3c63-cf94-4f83-844b-665e3521219b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18d0b58c-ee00-4fb0-be66-c572e66ce61f",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0572e01-0199-4bbb-9fe7-12557ea734c4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "234c5e10-66cb-4e31-aba9-fbc9830da7e0",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acb81975-ed80-43e8-bf1a-34d627aefbfd",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScrolled",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "512de2c5-fe1f-426d-898c-38c362f14d86",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2213663-4ae8-499d-9062-097b554f1716",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouchMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}